@@ -127,6 +127,8 @@ public class EventHistoryMapper {
     public static final String RPA_REASON_MANUAL_DETERMINATION = "RPA Reason: Manual Determination Required.";
     public static final String RPA_REASON_JUDGMENT_BY_ADMISSION = "RPA Reason: Judgment by Admission requested and claim moved offline.";
     public static final String RPA_IN_MEDIATION = "IN MEDIATION";
+    final String enter = "Enter";
+    final String lifted = "Lifted";
 
     public EventHistory buildEvents(CaseData caseData) {
         return buildEvents(caseData, null);
@@ -164,8 +166,7 @@ public class EventHistoryMapper {
                     case NOTIFICATION_ACKNOWLEDGED:
                         buildAcknowledgementOfServiceReceived(builder, caseData);
                         break;
-                    case NOTIFICATION_ACKNOWLEDGED_TIME_EXTENSION:
-                    case CLAIM_DETAILS_NOTIFIED_TIME_EXTENSION:
+                    case NOTIFICATION_ACKNOWLEDGED_TIME_EXTENSION, CLAIM_DETAILS_NOTIFIED_TIME_EXTENSION:
                         buildConsentExtensionFilingDefence(builder, caseData);
                         break;
                     case FULL_DEFENCE:
@@ -185,12 +186,10 @@ public class EventHistoryMapper {
                     // It can share the same RPA builder as DIVERGENT_RESPOND state because it builds events according
                     // to defendant response
                     // DIVERGENT_RESPOND states would only happen in 1v2 diff sol after both defendant responds.
-                    case AWAITING_RESPONSES_FULL_DEFENCE_RECEIVED:
-                    case AWAITING_RESPONSES_NOT_FULL_DEFENCE_RECEIVED:
+                    case AWAITING_RESPONSES_FULL_DEFENCE_RECEIVED, AWAITING_RESPONSES_NOT_FULL_DEFENCE_RECEIVED:
                         buildRespondentDivergentResponse(builder, caseData, false);
                         break;
-                    case DIVERGENT_RESPOND_GENERATE_DQ_GO_OFFLINE:
-                    case DIVERGENT_RESPOND_GO_OFFLINE:
+                    case DIVERGENT_RESPOND_GENERATE_DQ_GO_OFFLINE, DIVERGENT_RESPOND_GO_OFFLINE:
                         buildRespondentDivergentResponse(builder, caseData, true);
                         break;
                     case FULL_DEFENCE_NOT_PROCEED:
@@ -239,8 +238,7 @@ public class EventHistoryMapper {
                     case TAKEN_OFFLINE_AFTER_SDO:
                         buildClaimTakenOfflineAfterSDO(builder, caseData);
                         break;
-                    case PART_ADMIT_REJECT_REPAYMENT:
-                    case FULL_ADMIT_REJECT_REPAYMENT:
+                    case PART_ADMIT_REJECT_REPAYMENT, FULL_ADMIT_REJECT_REPAYMENT:
                         buildSpecAdmitRejectRepayment(builder, caseData);
                         break;
                     case IN_MEDIATION:
@@ -257,21 +255,21 @@ public class EventHistoryMapper {
         if (null != caseData.getBreathing()) {
             if (null != caseData.getBreathing().getEnter() && null == caseData.getBreathing().getLift()) {
                 if (BreathingSpaceType.STANDARD.equals(caseData.getBreathing().getEnter().getType())) {
-                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_ENTERED, "Enter");
+                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_ENTERED, enter);
                 } else if (BreathingSpaceType.MENTAL_HEALTH.equals(caseData.getBreathing().getEnter().getType())) {
                     buildBreathingSpaceEvent(builder, caseData,
-                                             MENTAL_HEALTH_BREATHING_SPACE_ENTERED, "Enter"
+                                             MENTAL_HEALTH_BREATHING_SPACE_ENTERED, enter
                     );
                 }
             } else if (null != caseData.getBreathing().getLift()) {
                 if (BreathingSpaceType.STANDARD.equals(caseData.getBreathing().getEnter().getType())) {
-                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_ENTERED, "Enter");
-                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_LIFTED, "Lifted");
+                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_ENTERED, enter);
+                    buildBreathingSpaceEvent(builder, caseData, BREATHING_SPACE_LIFTED, lifted);
                 } else if (BreathingSpaceType.MENTAL_HEALTH.equals(caseData.getBreathing().getEnter().getType())) {
                     buildBreathingSpaceEvent(builder, caseData,
-                                             MENTAL_HEALTH_BREATHING_SPACE_ENTERED, "Enter"
+                                             MENTAL_HEALTH_BREATHING_SPACE_ENTERED, enter
                     );
-                    buildBreathingSpaceEvent(builder, caseData, MENTAL_HEALTH_BREATHING_SPACE_LIFTED, "Lifted");
+                    buildBreathingSpaceEvent(builder, caseData, MENTAL_HEALTH_BREATHING_SPACE_LIFTED, lifted);
                 }
             }
         }
@@ -287,23 +285,22 @@ public class EventHistoryMapper {
     }
 
     private void buildInterlocutoryJudgment(EventHistory.EventHistoryBuilder builder, CaseData caseData) {
-
         List<Event> events = new ArrayList<>();
-        Boolean grantedFlag = caseData.getRespondent2() != null
+        boolean grantedFlag = caseData.getRespondent2() != null
             && caseData.getDefendantDetails() != null
             && !caseData.getDefendantDetails().getValue()
             .getLabel().startsWith("Both");
         if (!grantedFlag && null != caseData.getHearingSupportRequirementsDJ()) {
-            events.add(prepareInterlocutoryJudgment(builder, caseData, RESPONDENT_ID));
+            events.add(prepareInterlocutoryJudgment(builder, RESPONDENT_ID));
 
             if (null != caseData.getRespondent2()) {
-                events.add(prepareInterlocutoryJudgment(builder, caseData, RESPONDENT2_ID));
+                events.add(prepareInterlocutoryJudgment(builder, RESPONDENT2_ID));
             }
             builder.interlocutoryJudgment(events);
         }
     }
 
-    private Event prepareInterlocutoryJudgment(EventHistory.EventHistoryBuilder builder, CaseData caseData,
+    private Event prepareInterlocutoryJudgment(EventHistory.EventHistoryBuilder builder,
                                                String litigiousPartyID) {
         return (Event.builder()
             .eventSequence(prepareEventSequence(builder.build()))
@@ -317,9 +314,8 @@ public class EventHistoryMapper {
     }
 
     private void buildDefaultJudgment(EventHistory.EventHistoryBuilder builder, CaseData caseData) {
-
         List<Event> events = new ArrayList<>();
-        Boolean grantedFlag = caseData.getRespondent2() != null
+        boolean grantedFlag = caseData.getRespondent2() != null
             && caseData.getDefendantDetailsSpec() != null
             && !caseData.getDefendantDetailsSpec().getValue()
             .getLabel().startsWith("Both");
@@ -332,7 +328,6 @@ public class EventHistoryMapper {
             }
             builder.defaultJudgment(events);
         }
-
     }
 
     private Event prepareDefaultJudgment(EventHistory.EventHistoryBuilder builder, CaseData caseData,
@@ -345,29 +340,31 @@ public class EventHistoryMapper {
             ? new BigDecimal(caseData.getPartialPaymentAmount()) : null;
         var partialPaymentPounds = isNotEmpty(partialPaymentPennies)
             ? MonetaryConversions.penniesToPounds(partialPaymentPennies) : null;
-        return (Event.builder()
+
+        LocalDateTime paymentInFullDate;
+        if (caseData.getPaymentTypeSelection().equals(DJPaymentTypeSelection.IMMEDIATELY)) {
+            paymentInFullDate = LocalDateTime.now();
+        } else if (caseData.getPaymentTypeSelection().equals(DJPaymentTypeSelection.SET_DATE)) {
+            paymentInFullDate = caseData.getPaymentSetDate().atStartOfDay();
+        } else {
+            paymentInFullDate = null;
+        }
+
+        return Event.builder()
             .eventSequence(prepareEventSequence(builder.build()))
             .eventCode(DEFAULT_JUDGMENT_GRANTED.getCode())
             .dateReceived(LocalDateTime.now())
             .litigiousPartyID(litigiousPartyID)
             .eventDetailsText("")
-            .eventDetails(EventDetails.builder().miscText("")
+            .eventDetails(EventDetails.builder()
+                              .miscText("")
                               .amountOfJudgment(amountClaimedWithInterest.setScale(2))
                               .amountOfCosts(JudgmentsOnlineHelper.getCostOfJudgmentForDJ(caseData))
-                              .amountPaidBeforeJudgment((caseData.getPartialPayment() == YesOrNo.YES)
-                                                            ? partialPaymentPounds : ZERO)
-                              .isJudgmentForthwith((caseData.getPaymentTypeSelection()
-                                  .equals(DJPaymentTypeSelection.IMMEDIATELY)) ? true : false)
-                              .paymentInFullDate((caseData.getPaymentTypeSelection()
-                                  .equals(DJPaymentTypeSelection.IMMEDIATELY))
-                                                     ? LocalDateTime.now()
-                                                     : (caseData.getPaymentTypeSelection()
-                                  .equals(DJPaymentTypeSelection.SET_DATE))
-                                  ? caseData.getPaymentSetDate().atStartOfDay() : null)
-                              .installmentAmount((caseData.getPaymentTypeSelection()
-                                  .equals(DJPaymentTypeSelection.REPAYMENT_PLAN))
-                                                     ? getInstallmentAmount(caseData.getRepaymentSuggestion())
-                                  .setScale(2)
+                              .amountPaidBeforeJudgment((caseData.getPartialPayment() == YesOrNo.YES) ? partialPaymentPounds : ZERO)
+                              .isJudgmentForthwith(caseData.getPaymentTypeSelection().equals(DJPaymentTypeSelection.IMMEDIATELY))
+                              .paymentInFullDate(paymentInFullDate)
+                              .installmentAmount(caseData.getPaymentTypeSelection().equals(DJPaymentTypeSelection.REPAYMENT_PLAN)
+                                                     ? getInstallmentAmount(caseData.getRepaymentSuggestion()).setScale(2)
                                                      : ZERO)
                               .installmentPeriod(getInstallmentPeriod(caseData))
                               .firstInstallmentDate(caseData.getRepaymentDate())
@@ -375,8 +372,7 @@ public class EventHistoryMapper {
                               .jointJudgment(caseData.getRespondent2() != null)
                               .judgmentToBeRegistered(false)
                               .build())
-            .build());
-
+            .build();
     }
 
     private BigDecimal getInstallmentAmount(String amount) {
@@ -408,7 +404,7 @@ public class EventHistoryMapper {
                 + caseData.getBreathing().getEnter().getReference() + ", ";
         }
 
-        if (bsStatus.equals("Enter")) {
+        if (bsStatus.equals(enter)) {
             if (caseData.getBreathing().getEnter().getStart() != null) {
                 if (eventDetails == null) {
                     eventDetails = StringUtils.capitalize(BS_START_DT) + " "
@@ -426,15 +422,13 @@ public class EventHistoryMapper {
                         + LocalDateTime.now();
                 }
             }
-        } else if (bsStatus.equals("Lifted")) {
-            if (caseData.getBreathing().getLift().getExpectedEnd() != null) {
-                if (eventDetails == null) {
-                    eventDetails = StringUtils.capitalize(BS_END_DATE) + " "
-                        + caseData.getBreathing().getLift().getExpectedEnd();
-                } else {
-                    eventDetails = eventDetails + BS_END_DATE + " "
-                        + caseData.getBreathing().getLift().getExpectedEnd();
-                }
+        } else if (bsStatus.equals(lifted) && caseData.getBreathing().getLift().getExpectedEnd() != null) {
+            if (eventDetails == null) {
+                eventDetails = StringUtils.capitalize(BS_END_DATE) + " "
+                    + caseData.getBreathing().getLift().getExpectedEnd();
+            } else {
+                eventDetails = eventDetails + BS_END_DATE + " "
+                    + caseData.getBreathing().getLift().getExpectedEnd();
             }
         }
 
@@ -642,10 +636,10 @@ public class EventHistoryMapper {
                 buildDefenceFiled(builder, caseData, respondentResponseDate, respondentID);
                 break;
             case PART_ADMISSION:
-                buildReceiptOfPartAdmission(builder, caseData, respondentResponseDate, respondentID);
+                buildReceiptOfPartAdmission(builder, respondentResponseDate, respondentID);
                 break;
             case FULL_ADMISSION:
-                buildReceiptOfAdmission(builder, caseData, respondentResponseDate, respondentID);
+                buildReceiptOfAdmission(builder, respondentResponseDate, respondentID);
                 break;
             default:
                 break;
@@ -662,10 +656,10 @@ public class EventHistoryMapper {
                 buildDefenceFiled(builder, caseData, respondentResponseDate, respondentID);
                 break;
             case PART_ADMISSION:
-                buildReceiptOfPartAdmission(builder, caseData, respondentResponseDate, respondentID);
+                buildReceiptOfPartAdmission(builder, respondentResponseDate, respondentID);
                 break;
             case FULL_ADMISSION:
-                buildReceiptOfAdmission(builder, caseData, respondentResponseDate, respondentID);
+                buildReceiptOfAdmission(builder, respondentResponseDate, respondentID);
                 break;
             default:
                 break;
@@ -726,7 +720,6 @@ public class EventHistoryMapper {
     }
 
     private void buildReceiptOfPartAdmission(EventHistory.EventHistoryBuilder builder,
-                                             CaseData caseData,
                                              LocalDateTime respondentResponseDate,
                                              String respondentID) {
         builder.receiptOfPartAdmission(
@@ -739,7 +732,6 @@ public class EventHistoryMapper {
     }
 
     private void buildReceiptOfAdmission(EventHistory.EventHistoryBuilder builder,
-                                         CaseData caseData,
                                          LocalDateTime respondentResponseDate,
                                          String respondentID) {
         builder.receiptOfAdmission(
@@ -756,11 +748,13 @@ public class EventHistoryMapper {
         String defaultText = "";
         if (scenario.equals(ONE_V_ONE) || scenario.equals(TWO_V_ONE)) {
             if (SPEC_CLAIM.equals(caseData.getCaseAccessCategory())) {
-                switch (scenario.equals(TWO_V_ONE)
-                    ? YES.equals(caseData.getDefendantSingleResponseToBothClaimants())
+                var responseTypeForSpec = scenario.equals(TWO_V_ONE)
+                    ? (YES.equals(caseData.getDefendantSingleResponseToBothClaimants())
                     ? caseData.getRespondent1ClaimResponseTypeForSpec()
-                    : caseData.getClaimant1ClaimResponseTypeForSpec()
-                    : caseData.getRespondent1ClaimResponseTypeForSpec()) {
+                    : caseData.getClaimant1ClaimResponseTypeForSpec())
+                    : caseData.getRespondent1ClaimResponseTypeForSpec();
+
+                switch (responseTypeForSpec) {
                     case COUNTER_CLAIM:
                         defaultText = "RPA Reason: Defendant rejects and counter claims.";
                         break;
@@ -955,13 +949,9 @@ public class EventHistoryMapper {
 
     public String prepareClaimDismissedDetails(FlowState.Main flowState) {
         switch (flowState) {
-            case CLAIM_NOTIFIED:
-            case CLAIM_DETAILS_NOTIFIED:
+            case CLAIM_NOTIFIED, CLAIM_DETAILS_NOTIFIED:
                 return "RPA Reason: Claim dismissed after no response from defendant after claimant sent notification.";
-            case NOTIFICATION_ACKNOWLEDGED:
-            case NOTIFICATION_ACKNOWLEDGED_TIME_EXTENSION:
-            case CLAIM_DETAILS_NOTIFIED_TIME_EXTENSION:
-            case PAST_CLAIM_DISMISSED_DEADLINE_AWAITING_CAMUNDA:
+            case NOTIFICATION_ACKNOWLEDGED, NOTIFICATION_ACKNOWLEDGED_TIME_EXTENSION, CLAIM_DETAILS_NOTIFIED_TIME_EXTENSION, PAST_CLAIM_DISMISSED_DEADLINE_AWAITING_CAMUNDA:
                 return "RPA Reason: Claim dismissed. No user action has been taken for 6 months.";
             default:
                 throw new IllegalStateException("Unexpected flow state " + flowState.fullName());
@@ -1003,7 +993,7 @@ public class EventHistoryMapper {
                             caseData
                     )
                             != null)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!generalApplications.isEmpty()) {
                 buildGeneralFormOfApplicationStrikeOut(builder, generalApplications);
@@ -1036,7 +1026,7 @@ public class EventHistoryMapper {
                                     .build())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         builder.generalFormOfApplication(generalApplicationsEvents);
     }
@@ -1059,7 +1049,7 @@ public class EventHistoryMapper {
                                     .getLitigiousPartyID())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         builder.defenceStruckOut(generalApplicationsEvents);
     }
@@ -1153,6 +1143,7 @@ public class EventHistoryMapper {
                 .build());
     }
 
+    final String rpaReasonOneRespondentNotified = "RPA Reason: Only one of the respondent is notified.";
     private void buildTakenOfflineAfterClaimNotified(EventHistory.EventHistoryBuilder builder, CaseData caseData) {
         builder.miscellaneous(
             List.of(
@@ -1160,9 +1151,9 @@ public class EventHistoryMapper {
                     .eventSequence(prepareEventSequence(builder.build()))
                     .eventCode(MISCELLANEOUS.getCode())
                     .dateReceived(caseData.getSubmittedDate())
-                    .eventDetailsText("RPA Reason: Only one of the respondent is notified.")
+                    .eventDetailsText(rpaReasonOneRespondentNotified)
                     .eventDetails(EventDetails.builder()
-                                      .miscText("RPA Reason: Only one of the respondent is notified.")
+                                      .miscText(rpaReasonOneRespondentNotified)
                                       .build())
                     .build()
             ));
@@ -1183,6 +1174,8 @@ public class EventHistoryMapper {
                     .build());
         }
     }
+
+    final String claimantProceeds = "Claimant proceeds.";
 
     private void buildFullDefenceProceed(EventHistory.EventHistoryBuilder builder, CaseData caseData, String authToken) {
         List<ClaimantResponseDetails> applicantDetails = prepareApplicantsDetails(caseData);
@@ -1208,7 +1201,7 @@ public class EventHistoryMapper {
                                       getPreferredCourtCode(caseData.getApplicant1DQ())
                                   ))
                                   .build())
-                .collect(Collectors.toList());
+                .toList();
             builder.directionsQuestionnaireFiled(dqForProceedingApplicantsSpec);
         } else {
             String preferredCourtCode = locationRefDataUtil.getPreferredCourtData(
@@ -1233,7 +1226,7 @@ public class EventHistoryMapper {
                                       preferredCourtCode
                                   ))
                                   .build())
-                .collect(Collectors.toList());
+                .toList();
             builder.directionsQuestionnaireFiled(dqForProceedingApplicants);
         }
 
@@ -1285,7 +1278,7 @@ public class EventHistoryMapper {
                     builder.miscellaneous(miscText);
                 } else {
                     List<String> applicantProceedsText = new ArrayList<>();
-                    applicantProceedsText.add("Claimant proceeds.");
+                    applicantProceedsText.add(claimantProceeds);
                     List<Event> miscText = prepareMiscEventList(builder, caseData, applicantProceedsText);
                     builder.miscellaneous(miscText);
                     buildTakenOfflineMultitrackUnspec(builder, caseData);
@@ -1309,7 +1302,7 @@ public class EventHistoryMapper {
                     builder.miscellaneous(miscText);
                 } else {
                     List<String> applicantProceedsText = new ArrayList<>();
-                    applicantProceedsText.add("Claimant proceeds.");
+                    applicantProceedsText.add(claimantProceeds);
                     List<Event> miscText = prepareMiscEventList(builder, caseData, applicantProceedsText);
                     builder.miscellaneous(miscText);
                     buildTakenOfflineMultitrackUnspec(builder, caseData);
@@ -1336,7 +1329,7 @@ public class EventHistoryMapper {
                     builder.miscellaneous(miscText);
                 } else {
                     List<String> applicantProceedsText = new ArrayList<>();
-                    applicantProceedsText.add("Claimant proceeds.");
+                    applicantProceedsText.add(claimantProceeds);
                     List<Event> miscText = prepareMiscEventList(builder, caseData, applicantProceedsText);
                     builder.miscellaneous(miscText);
                     buildTakenOfflineMultitrackUnspec(builder, caseData);
@@ -1410,27 +1403,29 @@ public class EventHistoryMapper {
         );
     }
 
+    final String proceed = "proceed";
+    final String notProceed = "not proceed";
+
     private List<String> prepMultipartyProceedMiscText(CaseData caseData) {
         List<String> eventDetailsText = new ArrayList<>();
         String currentTime = time.now().toLocalDate().toString();
 
         switch (getMultiPartyScenario(caseData)) {
-            case ONE_V_TWO_ONE_LEGAL_REP:
-            case ONE_V_TWO_TWO_LEGAL_REP: {
+            case ONE_V_TWO_ONE_LEGAL_REP, ONE_V_TWO_TWO_LEGAL_REP: {
                 eventDetailsText.add(String.format(
                     "RPA Reason: [1 of 2 - %s] Claimant has provided intention: %s against defendant: %s",
                     currentTime,
                     YES.equals(caseData.getApplicant1ProceedWithClaimAgainstRespondent1MultiParty1v2())
-                        ? "proceed"
-                        : "not proceed",
+                        ? proceed
+                        : notProceed,
                     caseData.getRespondent1().getPartyName()
                 ));
                 eventDetailsText.add(String.format(
                     "RPA Reason: [2 of 2 - %s] Claimant has provided intention: %s against defendant: %s",
                     currentTime,
                     YES.equals(caseData.getApplicant1ProceedWithClaimAgainstRespondent2MultiParty1v2())
-                        ? "proceed"
-                        : "not proceed",
+                        ? proceed
+                        : notProceed,
                     caseData.getRespondent2().getPartyName()
                 ));
                 break;
@@ -1450,16 +1445,16 @@ public class EventHistoryMapper {
                     currentTime,
                     caseData.getApplicant1().getPartyName(),
                     YES.equals(app1Proceeds)
-                        ? "proceed"
-                        : "not proceed"
+                        ? proceed
+                        : notProceed
                 ));
                 eventDetailsText.add(String.format(
                     "RPA Reason: [2 of 2 - %s] Claimant: %s has provided intention: %s",
                     currentTime,
                     caseData.getApplicant2().getPartyName(),
                     YES.equals(app2Proceeds)
-                        ? "proceed"
-                        : "not proceed"
+                        ? proceed
+                        : notProceed
                 ));
                 break;
             }
@@ -1486,7 +1481,7 @@ public class EventHistoryMapper {
                                                 .miscText(miscEventText.get(index))
                                                 .build())
                               .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public boolean isStayClaim(DQ dq) {
@@ -1720,7 +1715,7 @@ public class EventHistoryMapper {
                     .eventDetails(EventDetails.builder().miscText(eventText).build())
                     .build();
             })
-            .collect(Collectors.toList());
+            .toList();
         builder.miscellaneous(events);
     }
 
@@ -1731,9 +1726,9 @@ public class EventHistoryMapper {
                     .eventSequence(prepareEventSequence(builder.build()))
                     .eventCode(MISCELLANEOUS.getCode())
                     .dateReceived(caseData.getSubmittedDate())
-                    .eventDetailsText("RPA Reason: Only one of the respondent is notified.")
+                    .eventDetailsText(rpaReasonOneRespondentNotified)
                     .eventDetails(EventDetails.builder()
-                                      .miscText("RPA Reason: Only one of the respondent is notified.")
+                                      .miscText(rpaReasonOneRespondentNotified)
                                       .build())
                     .build()
             ));
@@ -1768,7 +1763,7 @@ public class EventHistoryMapper {
                     .eventDetails(EventDetails.builder().miscText(eventText).build())
                     .build();
             })
-            .collect(Collectors.toList());
+            .toList();
         builder.miscellaneous(events);
     }
 
@@ -1997,7 +1992,6 @@ public class EventHistoryMapper {
     private void buildRespondentPartAdmission(EventHistory.EventHistoryBuilder builder, CaseData caseData) {
         String miscText;
         List<Event> directionsQuestionnaireFiledEvents = new ArrayList<>();
-        boolean isRespondent1;
         if (defendant1ResponseExists.test(caseData)) {
             final Party respondent1 = caseData.getRespondent1();
             miscText = prepareRespondentResponseText(caseData, caseData.getRespondent1(), true);
